[package]
name = "ascii-shadow"
version = "0.1.0"
edition = "2024"
description = "Convert images to ASCII art with color support"
license = "GPL-v3"
repository = "https://github.com/tatlilimon/ascii-shadow"
keywords = ["ascii", "art", "cli", "terminal", "image"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
